# HTP_love

./: README.md  main.cpp
laba_1/: CMakeLists.txt
laba_2/: main.cpp
laba_4/: main.cpp
laba_7/: CMakeLists.txt  func.cpp  func.hpp  main.cpp
laba_8/: CMakeLists.txt  laba8.1.cpp  laba8.2.cpp  laba8.3.cpp
